--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -77,11 +77,19 @@
   margin-right: 2vw;
 }
 
+.handlee_font {
+  font-family: 'Handlee', cursive;
+}
+
+.roboto_font {
+  font-family: 'Roboto', sans-serif;
+}
+
 #controls{
   /*margin: 4vw 6vw 0 0;*/
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 25%; 
   /*float: right;*/
